--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 				<tbody>
 					<tr>
 						<th>label</th>
-						<td>'Back'</td>
+						<td>'Back'<br>'parent'</td>
 						<td>Label for the back button. Set to <em>true</em> to use the link's own label</td>
 					</tr>
 					<tr>
